--- a/nevjegystyle.css
+++ b/nevjegystyle.css
@@ -4,15 +4,38 @@ body{
     background-size: cover;
 }
 
+h1{
+    font-family: "AlegreyaSansSC-ExtraBold";
+    text-align: center
+}
+
+p{
+    font-size: 18px;
+    text-align: center;
+}
+
+.varos{
+    
+    font-family: "AlegreyaSansSC-ExtraBold";
+    font-weight: bolder;
+
+}
+
+.tartalom{
+    font-family: "Alegreya-Medium";
+    text-align: left;
+    font-size: 18px;
+}
 /*szelesseg 500
 felső eltartás 170
 középen
 bels[ eltartas 75 es 30*/
 
 .box {
+    text-align: left;
     width: 500px;
     margin: 170px auto 0;
-    background: transparent linear-gradient(to left top, #949FCB 0%, #FFFCDC 100%) 0% 0% no-repeat padding-box;;
+    background: transparent linear-gradient(to left top, #949FCB 0%, #FFFCDC 100%) 0% 0% no-repeat padding-box;
     padding: 130px 75px 30px;
     box-sizing: border-box;
     position: relative;
