--- a/nevjegystyle.css
+++ b/nevjegystyle.css
@@ -1,4 +1,5 @@
 body{
+    min-height: 100vh;
     background: url(images/landscape-little.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -33,15 +34,22 @@ bels[ eltartas 75 es 30*/
 
 .box {
     text-align: left;
-    width: 500px;
+    max-width: 500px;
     margin: 170px auto 0;
     background: transparent linear-gradient(to left top, #949FCB 0%, #FFFCDC 100%) 0% 0% no-repeat padding-box;
-    padding: 130px 75px 30px;
+    padding: 130px 15px 30px;
     box-sizing: border-box;
     position: relative;
 }
 
 /*padding bels eltartas margin kulso eltartas*/
+
+.content {
+    max-width: 350px;
+    margin: 0 auto;
+
+}
+/*mobil layout fits the screen*/
 
 .avatar{
     position: absolute; /*első pozicionált szülőhöz képest fogja állítani pozition:relative*/
